@@ -33,7 +33,7 @@ if (!empty($HTTP_GET_VARS["GALLERY_BASEDIR"]) ||
 require($GALLERY_BASEDIR . "init.php");
 
 // Hack check
-if (!$gallery->user->canWriteToAlbum($gallery->album)) {
+if (!$gallery->user->canWriteToAlbum($gallery->album) && !($gallery->album->isItemOwner($gallery->user->getUid(), $index) && $gallery->album->getItemOwnerModify())) {
 	exit;
 }
 ?>
