@@ -1,5 +1,10 @@
 $Id$
 
+2003-06-26  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-item_owner_branch-b3
+	
+	* added item owner to configuration.  Changed permissions to modify and
+	  delete.
+
 2003-06-26  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-item_owner_branch-b2
 	
 	* Merged in current 1.3.5 head
